# NeuralNetwork

./: .editorconfig  .gitignore  .pdm-python  HiddenLayers.cs  KaggleOpdracht.ipynb  NeuralNetwork.sln  Program.cs  TensorFlowTutorial.cs  imageNetwork.cs  pyproject.toml  tensorflow.py  tensorflowOpdracht.py
Kaggle Gaggle/: KaggleOpdracht.ipynb
Kaggle Gaggle/Documenten/: Kaggledocument.docx
tensorflow/: opdracht2.py  tensorflowOpdracht.py
